# osulv-dc-bot

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose-without-postgres.yaml  docker-compose.yaml  osu_api.py  pyproject.toml  requirements.txt  utils.py
cogs/: commands.py  events.py  user_newbest.py
src/: app.py  bot.py  config.py  debug.ipynb  osu_api.py  utils.py
src/cogs/: commands.py  daily_challenge.py  events.py  global_top50.py  link_user.py  roles.py  user_newbest.py
src/db/: db.py  schema.py
