[project]
name = "osulv-dc-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "asyncpg",
    "discord",
    "loguru",
    "ossapi",
    "python-dateutil",
    "python-dotenv",
    "rosu-pp-py",
    "ruff",
]

[tool.ruff]
exclude = [
    "src/bot.py",
]
